--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "knowit",
+  "name": "github-repositories-browser",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Rui Yu <rui.yu@07.no>",
