Made some preliminary config changes

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,6 +3,11 @@
   "short_name": "GitHub Repos",
   "icons": [
     {
+      "src": "/img/icons/msapplication-icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
       "src": "/img/icons/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
